log/hyper_Use:_Aux:0.99_FS:4_KD:1_Pos:012345_Lr:0.01_Conv6HyperSearch_std.err
Traceback (most recent call last):
  File "/home-nfs/lorell/miniconda3/envs/baby/lib/python3.7/runpy.py", line 193, in _run_module_as_main
    "__main__", mod_spec)
  File "/home-nfs/lorell/miniconda3/envs/baby/lib/python3.7/runpy.py", line 85, in _run_code
    exec(code, run_globals)
  File "/home-nfs/lorell/new_12s/SparseDebugging/src/__main__.py", line 1, in <module>
    from src.app import run
  File "/home-nfs/lorell/new_12s/SparseDebugging/src/app.py", line 2, in <module>
    import src.models as models
  File "/home-nfs/lorell/new_12s/SparseDebugging/src/models.py", line 4, in <module>
    from src.granular import HierarchicalRingTopK, HierarchicalRingOMP
  File "/home-nfs/lorell/new_12s/SparseDebugging/src/granular.py", line 102
    de-biased = (descriptor - (self.dict.bias.unsqueeze(0).unsqueeze(2).unsqueeze(3))) * non_zeros
    ^
SyntaxError: can't assign to operator
